assets/style.css
.container {
    height: 50em;
    padding-left: 25%;
    padding-right: 25%;
}

/* Answer box style */

.container .answer-box {
    display: flex;
    justify-content: end;
    align-items: flex-end;
    height: 17%;
    background-color: rgb(55, 49, 49);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

/* First Row styles */

.first {
    display: flex;
    justify-content: center;
    height: 17%;

}

.first .clear {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.first .cubed {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.first .squared {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.first .divide {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: orange;
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

/* Second Row styles */

.second {
    display: flex;
    justify-content: center;
    height: 17%;

}

.second .seven {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.second .eight {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.second .nine {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.second .multiply {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: orange;
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

/* Third Row styles */

.third {
    display: flex;
    justify-content: center;
    height: 17%;

}

.third .four {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.third .five {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.third .six {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.third .minus {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: orange;
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 600%;
}

/* Fourth Row styles */

.fourth {
    display: flex;
    justify-content: center;
    height: 17%;

}

.fourth .one {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.fourth .two {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.fourth .three {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.fourth .plus {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: orange;
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

/* Fifth Row styles */

.fifth {
    display: flex;
    justify-content: center;
    height: 16.5%;

}

.fifth .zero {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50.5%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.fifth .decimal {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: rgb(70, 70, 70);
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}

.fifth .equal {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    background-color: orange;
    color: white;
    border-style: solid;
    border-color: black;
    border-width: 2px;
    font-size: 400%;
}


@media screen and (max-width: 1080px) {
    .container {
        height: 50em;
        padding-left: 0%;
        padding-right: 0%;
    }

    .container .answer-box {
        display: flex;
        justify-content: end;
        align-items: flex-end;
    }
}

